# ledgerai

./: .gitignore  .mcp.json  CLAUDE.md  CLAUDE_CODE_BUILD_SPEC.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: agentledger-ci.yml  ci.yml  load-nightly.yml  migrate.yml  push-images.yml  release.yml
agentledger/: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  Dockerfile  Dockerfile.dashboard  Dockerfile.mvp  Makefile  README.md  docker-compose.yml  executive-demo.xlsx
agentledger/.githooks/: pre-commit
agentledger/apps/dashboard/: Dockerfile  README.md  jest.config.js  middleware.ts  (+5 more)
agentledger/deploy/: migrate-dashboard.ps1  start-dashboard.ps1  verify-dashboard-build.ps1
agentledger/docs/: ARCHITECTURE.md  ARCHITECTURE_PIVOT.md  ATTRIBUTION_ENGINE_BUILD.md  CODING_TOOL_ADAPTERS_SPEC.md  DEPLOYMENT.md  ENVIRONMENT.md
agentledger/ml/: README.md  conftest.py  pyproject.toml
agentledger/ml/badgerdata/: __init__.py  guardrails.py  prompt.py  schema.py  vocab.py
agentledger/ml/datagen/: __init__.py  generate.py
agentledger/ml/eval/: __init__.py  run_eval.py
agentledger/ml/export/: MODEL_CARD.template.md  Modelfile  __init__.py  export.py
agentledger/ml/tests/: test_datagen.py  test_eval.py  test_guardrails.py  test_prompt.py  test_schema.py
agentledger/ml/train/: __init__.py  finetune.py
agentledger/pricing/: pricebook.candidate.json  pricebook.diff.json
docs/: CODING_TOOL_ADAPTERS_SPEC.md
schemas/events/: llm_call.schema.json
(+812 files in other folders)
